--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 __pycache__/
 log/
 log_tensorboard/
-dataset/downstream/
-dataset/pretrain/
-dataset/raw/Ratings/
-dataset/raw/Metadata/
-.idea/
+dataset/
